# korean-bill-debate-mcp

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  SPEC.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json  tsconfig.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  fixture_request.yml
.github/workflows/: ci.yml  post-release-smoke.yml
api/: index.py  research_dispatch.py
api/queues/: kbd-research-bulk.ts  kbd-research-control.ts  kbd-research-recovery.ts  kbd-research.ts
benchmarks/: e5-cross-language.json  fts5.json  hybrid-bilingual.json  live-smoke-queries.json  release-smoke.json  research-qa.json  utility-queries.json
docs/: architecture.md  corpus-operations.md  data-sources.md  demo.html  demo.tape  deployment.md  mcp-clients.md  roadmap.md  workspace.md
scripts/: benchmark_fts.py  build_corpus.py  collect_parser_review_set.py  demo_session.sh  evaluate_e5.py  evaluate_hybrid.py  evaluate_utility.py  live_smoke.py  qa_research.py  render_demo.sh  smoke_http_deployment.py  smoke_installed_mcp.py  smoke_remote_durable_oauth.py  smoke_remote_mcp.py  smoke_remote_oauth.py  smoke_remote_production_matrix.py  smoke_stdio_live.py  smoke_workspace_live.py  validate_release.py  verify_vercel_queue_bundle.mjs
serverless/: kbd-research-queue-callback.js  kbd-research-queue-callback.ts  kbd-research-shared.d.mts  kbd-research-shared.mjs
src/kasm/: __init__.py  app.py  config.py  live.py  setup.py  vercel_context.py
src/kasm/adapters/: __init__.py
src/kasm/cli/: __init__.py  main.py
src/kasm/core/: __init__.py  exceptions.py  ids.py  models.py  provenance.py  quality.py  relations.py
src/kasm/corpus/: __init__.py  build_pipeline.py  corpus_cli.py  inventory.py  lexical.py  models.py  repository.py  serialization.py  storage.py
src/kasm/indexing/: __init__.py  build.py  embeddings.py  evaluation.py  vector.py
src/kasm/mcp/: __init__.py  deployment.py  middleware.py  remote_auth.py  remote_oauth.py  (+2 more)
tests/integration/: test_app.py  test_corpus_build_pipeline.py  test_database.py  test_deployed_app.py  test_hosted_research_deployment.py  test_live_services.py  test_mcp_http.py  test_mcp_local_durable_e2e.py  test_mcp_oauth_client.py  test_mcp_stdio.py  test_open_assembly_ingestion.py  test_open_assembly_pipeline.py  test_vector_build.py
tests/node/: kbd-research-recovery.test.mjs  kbd-research.test.mjs
tests/unit/: test_bilingual.py  test_bill_documents.py  test_bills.py  test_cli.py  test_corpus_blob_storage.py  test_corpus_cli.py  test_corpus_inventory.py  test_corpus_repository.py  test_deployment_rate_limit.py  test_distinct_official_parser_fixtures.py  test_embeddings.py  test_hybrid_evaluation.py  test_ids.py  test_korea_client.py  test_lexical.py  test_live_bounded_scope.py  test_mcp_tools.py  test_minutes_fetcher.py  test_models.py  test_open_assembly_contract.py  test_parser.py  test_parser_quality.py  test_post_release_smoke_workflow.py  test_quality.py  test_ranking.py  test_relations.py  test_release_version.py  test_remote_auth.py  test_remote_durable_smoke.py  test_remote_production_matrix.py  test_research_artifact_job_storage.py  test_research_artifact_run_storage.py  test_research_artifacts.py  test_research_assembly_terms.py  test_research_backend.py  test_research_bill_documents.py  test_research_collector.py  test_research_contracts.py  test_research_corpus_bridge.py  test_research_corpus_engine_integration.py  (+36 more)
(+76 files in other folders)
