[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korean-bill-debate-mcp"
version = "0.7.0"
description = "Evidence-linked research across Korean bills, status, debates, and context"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Korean Bill & Debate MCP contributors" }]
keywords = ["mcp", "korea", "parliament", "national-assembly", "semantic-search"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
]
dependencies = ["mcp>=1.10"]

[project.urls]
Homepage = "https://github.com/epoko77-ai/korean-bill-debate-mcp"
Repository = "https://github.com/epoko77-ai/korean-bill-debate-mcp"
Issues = "https://github.com/epoko77-ai/korean-bill-debate-mcp/issues"

[project.optional-dependencies]
mcp = []
semantic = ["sentence-transformers>=3", "numpy>=2", "faiss-cpu>=1.8"]
deploy = [
  "mcp>=1.10",
  "uvicorn>=0.30",
]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.9", "mypy>=1.14"]

[project.scripts]
korean-bill-debate-mcp = "kasm.cli.main:main"
kbd = "kasm.cli.main:main"
kasm = "kasm.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kasm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP046", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["kasm"]
